# PTerminal

./: .gitignore  PLAN.md  README.md
.github/workflows/: release.yml
pterminal/: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  version.json  vite.config.ts
pterminal/src/: App.tsx  index.css  main.tsx
pterminal/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
pterminal/src-tauri/capabilities/: default.json
pterminal/src-tauri/icons/: icon.icns
pterminal/src-tauri/src/: db.rs  lib.rs  models.rs  state.rs
pterminal/src-tauri/src/ai/: client.rs  mod.rs  prompt.rs  stream.rs
pterminal/src-tauri/src/commands/: ai.rs  commands.rs  mod.rs  settings.rs  ssh.rs  terminal.rs  workspace.rs
pterminal/src/components/: Toaster.tsx
pterminal/src/components/ai/: AIChatPanel.tsx
pterminal/src/components/commands/: CommandForm.tsx  CommonCommands.tsx
pterminal/src/components/layout/: AppLayout.tsx  CenterPanel.tsx  LeftPanel.tsx  Resizer.tsx  RightPanel.tsx  TopBar.tsx
pterminal/src/components/ssh/: SshShortcuts.tsx
pterminal/src/hooks/: useAIStream.ts  useKeyboardShortcuts.ts  useTauriEvents.ts  useTerminalAutocomplete.ts
pterminal/src/i18n/: I18nProvider.tsx  translations.ts
pterminal/src/services/: aiService.ts  autocompleteEvents.ts  commandService.ts  proxyService.ts  settingsService.ts  shortcutService.ts  sshService.ts  terminalRegistry.ts  terminalService.ts  workspaceService.ts
pterminal/src/stores/: appStore.ts  toastStore.ts
pterminal/src/types/: index.ts
pterminal/src/utils/: validation.ts
(+4 files in other folders)
