[package]
name = "app"
version = "0.1.9"
description = "PTerminal - macOS native AI terminal"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

# PTY for real terminal processes
portable-pty = "0.9"

# SQLite persistence
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Async runtime & HTTP for AI layer
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
futures-util = "0.3"

# Low-level fd flags for non-blocking PTY reads (H6 reader timeout)
libc = "0.2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
